--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.509.0",
     "next": "15.2.1",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
